<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_delete" android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="100" app:showAsAction="always"
        android:visible="true"/>
</menu>
