<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ebelli.simpledrawing.view.DrawActivity">
    <item android:id="@+id/action_colorpicker" android:title="@string/color_picker"
        android:icon="@drawable/ic_colorize_white_24dp"
        android:orderInCategory="10" app:showAsAction="always" />
    <item android:id="@+id/action_fill" android:title="@string/action_fill"
        android:icon="@drawable/ic_format_color_fill_white_24dp"
        android:orderInCategory="20" app:showAsAction="always" />
    <item android:id="@+id/action_clear" android:title="@string/action_clear"
        android:icon="@drawable/ic_clear_white_24dp"
        android:orderInCategory="30" app:showAsAction="always" />
    <item android:id="@+id/action_save" android:title="@string/action_saver"
        android:icon="@drawable/ic_save_white_24dp"
        android:orderInCategory="40" app:showAsAction="always" />
</menu>
